samples/_failures_safe/1761178259_5b19a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7523de6.c: In function ‘process_compression_demo’:
./samples/SAFE/__tmp_c7523de6.c:145:16: error: missing terminating " character
  145 |         printf("Compression failed
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c7523de6.c:145:9: error: expected expression at end of input
  145 |         printf("Compression failed
      |         ^~~~~~
./samples/SAFE/__tmp_c7523de6.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7523de6.c:145:9: error: expected declaration or statement at end of input
